--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 AUTH_SECRET="AUTH_SECRET" # Added by `npx auth`. Read more: https://cli.authjs.dev
+
+AUTH_GOOGLE_ID="AUTH_GOOGLE_ID"
+AUTH_GOOGLE_SECRET="AUTH_GOOGLE_SECRET"
