--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ AUTH_SECRET="AUTH_SECRET" # Added by `npx auth`. Read more: https://cli.authjs.d
 
 AUTH_GOOGLE_ID="AUTH_GOOGLE_ID"
 AUTH_GOOGLE_SECRET="AUTH_GOOGLE_SECRET"
+
+AUTH_DYNAMODB_ID="AUTH_DYNAMODB_ID"
+AUTH_DYNAMODB_SECRET="AUTH_DYNAMODB_SECRET"
+AUTH_DYNAMODB_REGION="AUTH_DYNAMODB_REGION"
+DYNAMODB_TABLE_NAME="DYNAMODB_TABLE_NAME"
