--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,13 @@ AUTH_SECRET="AUTH_SECRET" # Added by `npx auth`. Read more: https://cli.authjs.d
 AUTH_GOOGLE_ID="AUTH_GOOGLE_ID"
 AUTH_GOOGLE_SECRET="AUTH_GOOGLE_SECRET"
 
-AUTH_DYNAMODB_ID="AUTH_DYNAMODB_ID"
-AUTH_DYNAMODB_SECRET="AUTH_DYNAMODB_SECRET"
-AUTH_DYNAMODB_REGION="AUTH_DYNAMODB_REGION"
-DYNAMODB_TABLE_NAME="DYNAMODB_TABLE_NAME"
+AWS_REGION="AWS_REGION"
+
+AWS_DYNAMODB_ACCESS_KEY_ID="AWS_DYNAMODB_ACCESS_KEY_ID"
+AWS_DYNAMODB_SECRET_ACCESS_KEY="AWS_DYNAMODB_SECRET_ACCESS_KEY"
+DYNAMODB_USERS_TABLE_NAME="DYNAMODB_USERS_TABLE_NAME"
+DYNAMODB_PHOTOS_TABLE_NAME="DYNAMODB_PHOTOS_TABLE_NAME"
+
+AWS_S3_ACCESS_KEY_ID="AWS_S3_ACCESS_KEY_ID"
+AWS_S3_SECRET_ACCESS_KEY="AWS_S3_SECRET_ACCESS_KEY"
+S3_BUCKET_NAME="S3_BUCKET_NAME"
