--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,18 @@ AUTH_SECRET="AUTH_SECRET" # Added by `npx auth`. Read more: https://cli.authjs.d
 
 AUTH_GOOGLE_ID="AUTH_GOOGLE_ID"
 AUTH_GOOGLE_SECRET="AUTH_GOOGLE_SECRET"
+AUTH_DRIZZLE_URL="AUTH_DRIZZLE_URL"
+
+POSTGRES_DATABASE="POSTGRES_DATABASE"
+POSTGRES_HOST="POSTGRES_HOST"
+POSTGRES_PASSWORD="POSTGRES_PASSWORD"
+POSTGRES_PRISMA_URL="POSTGRES_PRISMA_URL"
+POSTGRES_URL="POSTGRES_URL"
+POSTGRES_URL_NON_POOLING="POSTGRES_URL_NON_POOLING"
+POSTGRES_URL_NO_SSL="POSTGRES_URL_NO_SSL"
+POSTGRES_USER="POSTGRES_USER"
 
 AWS_REGION="AWS_REGION"
-
-AWS_DYNAMODB_ACCESS_KEY_ID="AWS_DYNAMODB_ACCESS_KEY_ID"
-AWS_DYNAMODB_SECRET_ACCESS_KEY="AWS_DYNAMODB_SECRET_ACCESS_KEY"
-DYNAMODB_USERS_TABLE_NAME="DYNAMODB_USERS_TABLE_NAME"
-DYNAMODB_PHOTOS_TABLE_NAME="DYNAMODB_PHOTOS_TABLE_NAME"
-
 AWS_S3_ACCESS_KEY_ID="AWS_S3_ACCESS_KEY_ID"
 AWS_S3_SECRET_ACCESS_KEY="AWS_S3_SECRET_ACCESS_KEY"
 S3_BUCKET_NAME="S3_BUCKET_NAME"
